// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchBar/> render the default search bar 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(255,255,255,0.2)",
      "borderRadius": 25,
      "flex": 1,
      "height": 40,
      "position": "relative",
    }
  }
>
  <Text />
  <TextInput
    allowFontScaling={true}
    keyboardAppearance="dark"
    onChangeText={[Function]}
    rejectResponderTermination={true}
    returnKeyType="search"
    style={
      Object {
        "borderWidth": 0,
        "color": "#fff",
        "fontFamily": "NunitoSans-Regular",
        "fontSize": 18,
        "height": 40,
        "paddingHorizontal": 40,
      }
    }
    testID="search-bar-input"
    underlineColorAndroid="transparent"
    value=""
  />
</View>
`;

exports[`<SearchBar/> render the search bar with a value 1`] = `
<View
  style={
    Object {
      "backgroundColor": "rgba(255,255,255,0.2)",
      "borderRadius": 25,
      "flex": 1,
      "height": 40,
      "position": "relative",
    }
  }
>
  <Text />
  <TextInput
    allowFontScaling={true}
    keyboardAppearance="dark"
    onChangeText={[Function]}
    rejectResponderTermination={true}
    returnKeyType="search"
    style={
      Object {
        "borderWidth": 0,
        "color": "#fff",
        "fontFamily": "NunitoSans-Regular",
        "fontSize": 18,
        "height": 40,
        "paddingHorizontal": 40,
      }
    }
    testID="search-bar-input"
    underlineColorAndroid="transparent"
    value="Alpha"
  />
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
        "padding": 8,
        "position": "absolute",
        "right": 4,
        "top": 0,
      }
    }
  >
    <Text />
  </View>
</View>
`;
